:zap:modify color theme

--- a/static/app/main.css
+++ b/static/app/main.css
@@ -4,7 +4,7 @@ body {
 .nav {
 	position: absolute;
 	width: 230px;
-	background-color: #3849a2;
+	background-color: #5469D6;
 	color: #FAFAFA;
 	padding: 15px;
 	box-sizing: border-box;
