--- a/static/app/main.css
+++ b/static/app/main.css
@@ -1,15 +1,28 @@
 body {
 	font-size: 16px;
 }
-.nav {
+
+ul, li {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+/* nav tree */
+ .nav {
 	position: absolute;
 	width: 230px;
-	background-color: #5469D6;
+	background-color: #3779E5;
 	color: #FAFAFA;
 	padding: 15px;
 	box-sizing: border-box;
 	height: 100%;
 	font-size: 13px;
+	-webkit-user-select: none;
+	user-select: none;
+}
+.nav .iconfont {
+	display: block;
+	line-height: 32px;
 }
 .nav a {
 	display: inline-block;
@@ -18,26 +31,12 @@ body {
 	height: 32px;
 	line-height: 32px;
 }
-ul, li {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-/* nav tree */
- .nav {
-	-webkit-user-select: none;
-	user-select: none;
-}
-.nav .iconfont {
-	display: block;
-	line-height: 32px;
-	color: #FAFAFA;
-}
 .nav-tree-file .nav-tree-text .arrow {
 	color: transparent;
 }
 .nav-tree-text {
 	padding-left: 5px;
+	margin: 5px 0;
 	cursor: pointer;
 }
 .nav-tree-folder .nav-tree {
@@ -54,11 +53,11 @@ ul, li {
 	margin-left: 20px;
 }
 .nav-tree-text:hover {
-	background-color: #495CC4;
+	background-color: #3272D9;
 	border-radius: 3px;
 }
 .nav-tree-text.active {
-	background-color: #495CC4;
+	background-color: #3272D9;
 	border-radius: 3px;
 }
 /* modify */
@@ -71,15 +70,20 @@ ul, li {
 	box-sizing: border-box;
 	overflow: hidden;
 }
-.markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5 {
-	background-color: #F6F6F6;
-	border-left: solid 5px #DDD;
-	padding: 15px 20px;
+.markdown-body h1 {
+	background-color: #F0F2FA;
+	border-left: solid 5px #DCDFEE;
+	padding: 11px 20px;
 	border-radius: 5px;
+}
+.markdown-body code {
+	background-color: #F0F2FA;
+}
+.markdown-body .highlight pre, .markdown-body pre {
+	background-color: #F0F2FA;
 }
 .markdown-body p > code {
 	padding: 5px 7px;
-	background-color: #F0F2FA;
 	margin: 0 5px;
 }
 .nav-tree-text {
